--- a/experiments/wflw/face_alignment_wflw_hrnet_w18.yaml
+++ b/experiments/wflw/face_alignment_wflw_hrnet_w18.yaml
@@ -4,7 +4,7 @@ PRINT_FREQ: 50
 
 DATASET:
   DATASET: WFLW
-  ROOT: './data/wflw/images/'
+  ROOT: './data/wflw/WFLW_images/'
   TRAINSET: './data/wflw/face_landmarks_wflw_train.csv'
   TESTSET: './data/wflw/face_landmarks_wflw_test.csv'
   FLIP: true
