--- a/experiments/wflw/test_wflw.yaml
+++ b/experiments/wflw/test_wflw.yaml
@@ -68,7 +68,7 @@ TRAIN:
   SHUFFLE: true
   BEGIN_EPOCH: 0
   END_EPOCH: 60
-  RESUME: false
+  RESUME: true
   OPTIMIZER: 'adam'
   LR: 0.0001
   WD: 0.0
@@ -76,4 +76,4 @@ TRAIN:
   MOMENTUM: 0.0
   NESTEROV: false
 TEST:
-  BATCH_SIZE_PER_GPU: 16
+  BATCH_SIZE_PER_GPU: 32
