--- a/experiments/wflw/test_wflw_1gpu.yaml
+++ b/experiments/wflw/test_wflw_1gpu.yaml
@@ -64,11 +64,11 @@ MODEL:
         - 144
       FUSE_METHOD: SUM
 TRAIN:
-  BATCH_SIZE_PER_GPU: 48
+  BATCH_SIZE_PER_GPU: 52
   SHUFFLE: true
   BEGIN_EPOCH: 0
   END_EPOCH: 60
-  RESUME: false
+  RESUME: true
   OPTIMIZER: 'adam'
   LR: 0.0001
   WD: 0.0
@@ -76,4 +76,4 @@ TRAIN:
   MOMENTUM: 0.0
   NESTEROV: false
 TEST:
-  BATCH_SIZE_PER_GPU: 16
+  BATCH_SIZE_PER_GPU: 52
